--- a/Cviko3-piskvorky/Cviko3-piskvorky/Cviko3-piskvorky.vcxproj.filters
+++ b/Cviko3-piskvorky/Cviko3-piskvorky/Cviko3-piskvorky.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
+    <ClInclude Include="piskvorky.h">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
-    <ClCompile Include="Cviko3-piskvorky.cpp">
+    <ClCompile Include="piskvorky.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
   </ItemGroup>
