--- a/Cviko3-piskvorky/Cviko3-piskvorky/Cviko3-piskvorky.vcxproj
+++ b/Cviko3-piskvorky/Cviko3-piskvorky/Cviko3-piskvorky.vcxproj
@@ -147,11 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="piskvorky.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Cviko3-piskvorky.cpp" />
+    <ClCompile Include="piskvorky.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
